cmake_minimum_required(VERSION 3.26)
project(AIOQB C)

set(CMAKE_C_STANDARD 11)

add_executable(AIOQB
        #P-01.c
        #P-02.c
        #P-03.c
        #P-04.c
        #P-05.c
        #P-06.c
        #P-07.c
        #P-08.c
        #P-09.c
        #P-10.c
        #P-11.c
        #P-12.c
        #P-13.c
        #P-14.c
        #P-15.c
        #P-16.c
        #P-17.c
        #P-18.c
        #P-19.c
        #P-20.c
        #P-21.c
        #P-22.c
        #P-23.c
        #P-24.c
        #P-25.c
        #P-26.c
        #P-27.c
        #P-28.c
        #P-29.c
        #P-30.c
)
